Tries fix tests when running on JDK9